adds problem starter for exceptions